crates/test-files/fixtures/compile_errors/missing_return_after_if.fe
contract Foo:
    pub def bar(val: u256) -> u256:
        if val > 1:
            return 5
